@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 10-05-2005 improved: Mem usage of TTF fonts is now comparible to XPR fonts.
   - 10-05-2005 changed: moved audio scrobbler cache to Q:\albums
   - 10-05-2005 added: flac codec for paplayer
   - 10-05-2005 added: Anti-aliasing of TTF fonts (including rendering of alpha shades).
